--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,8 @@
 name: Generate snake animation
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */6 * * *"
+  schedule: # execute every 1/2 hour
+    - cron: "* */0.5 * * *"
 
   workflow_dispatch:
 
